--- a/03_02/index.html
+++ b/03_02/index.html
@@ -14,8 +14,8 @@
       readers.
     </p>
     <p class="sr-only">
-      This text is not visible in visual browsers, but will be read out by
-      screen readers.
+      This text is not visible in visual browsers becuase of the CSS 1x1 pic or
+      css style set to dissplay none, but will be read out by screen readers.
     </p>
   </body>
 </html>
