--- a/04_05/index.html
+++ b/04_05/index.html
@@ -10,5 +10,7 @@
   <body>
     <h1>A button with CSS reset applied</h1>
     <button>I am a button</button>
+
+    <!-- it is better to use the native html button element and style it with css -->
   </body>
 </html>
