--- a/04_07/index.html
+++ b/04_07/index.html
@@ -14,7 +14,10 @@
       button."
     </p>
     <button id="print-button">
+      <!-- comment the SVG with aria hidden and focusable false -->
       <svg
+        aria-hidden="true"
+        focusable="false"
         class="icon icon-printer"
         id="icon-printer"
         viewBox="0 0 32 32"
