--- a/04_05/index.html
+++ b/04_05/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
-    <title>Button reset example</title>
+    <title>Button reset exampledfsdf</title>
   </head>
   <body>
     <h1>A button with CSS reset applied</h1>
