--- a/06_01/index.html
+++ b/06_01/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
     <script src="script.js" defer></script>
-    <title>Accessible mobile hamburger menu</title>
+    <title>Accessibledfa aobile hamburger menu</title>
   </head>
   <body>
     <nav id="navigation" class="main-nav">
